<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/favButtonItem"
        android:icon="@drawable/favorited"
        android:title="@string/favorit"
        app:showAsAction="always"/>

</menu>